--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,6 @@
 @font-face{
 font-family :"AWAKENNING Personal Use";
-src :url("fuentes/AWAKENNING Personal Use.Ttf");
+src :url("fuentes/AWAKENNING Personal Use.ttf");
 }
 @font-face{
 font-family :"Hey Comic";
